// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render renders a children function with arguments 1`] = `
<[object Object]
  value={
    Object {
      "play": [Function],
      "rewind": [Function],
      "value": Value {
        "value": 0,
      },
    }
  }
>
  <[object Object] />
</[object Object]>
`;

exports[`#render renders a regular children 1`] = `
<[object Object]
  value={
    Object {
      "play": [Function],
      "rewind": [Function],
      "value": Value {
        "value": 0,
      },
    }
  }
>
  <Child />
</[object Object]>
`;
